--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "tslint": "^5.7.0",
     "tslint-config-swimlane": "^3.0.3",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.5.2",
+    "typescript": "2.3.4",
     "uglify-js": "^3.0.28",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.6",
